--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;1,100;1,400&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;1,100;1,400&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./main.css">
     <title>Emojift</title>
@@ -41,9 +43,33 @@
         <div class="main__block1">
             <div class="outside__container outside__block1">
                 <div class="inside__container inside__block1">
-                    
+                    <h1 class="block1__main-text">Магазин ідеальних подарунків та незабутніх вражень</h1>
+                    <h2 class="block1__description-text">Більше не треба витрачати купу часу та нервів на пошуки подарунку. Emojift гарантує позитивні емоції!</h2>
+                    <img src="./img/mainPage/main1.png" alt="Main image" class="block1__main-image">
                 </div>
             </div>
+        </div>
+        <div class="main__block2">
+            <div class="outside__container outside__block2">
+                <div class="inside__container inside__block2">
+                    <h2 class="block2__main-text">Завжди в наявності</h2>
+                    <div class="block2__buy-options">
+                        <div class="block2__buy-item">
+                            <p class="buy-description">Саме той ідеальний подарунок</p>
+                            <img src="./img/mainPage/main2.png" alt="Perfect gift" class="buy-img">
+                        </div>
+                        <div class="block2__buy-item">
+                            <p class="buy-description">Безцінне враження, яке можна придбати</p>
+                            <img src="./img/mainPage/main3.png" alt="Perfect gift" class="buy-img">
+                        </div>
+                        <div class="block2__buy-item">
+                            <p class="buy-description">Приємна дрібничка без приводу</p>
+                            <img src="./img/mainPage/main4.png" alt="Perfect gift" class="buy-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </main>
 </body>
