main page no adaptive

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <body>
     <header class="header">
         <div class="outside__container header__container">
-            <div class="header__logo-name">
-                <div class="header__logo logo">
-                    <img src="./img/mainPage/logo.png" alt="Logo" class="header__logo-image">
+            <div class="logo-name">
+                <div class="logo">
+                    <img src="./img/mainPage/logo.png" alt="Logo" class="logo-image">
                 </div>
-                <div class="header__name">Emojift</div>
+                <div class="name">Emojift</div>
             </div>
+            <img src="./img/mainPage/hidden_menu.png" alt="Hidden Menu" class="header__hidden-menu">
             <div class="header__links">
                 <a href="#" class="header__link1 header__link">Подарунки</a>
                 <a href="#" class="header__link2 header__link">Враження</a>
@@ -71,6 +72,63 @@
             </div>
             
         </div>
+        <div class="main__block3">
+            <div class="outside__container outside__block3">
+                <div class="inside__container inside__block3">
+                   <h2 class="block3__main-text">Таємне побачення</h2>
+                   <p class="block3__description-text">
+                       Подаруйте коханому або коханій незабутній сюрприз.
+                        Ми все влаштуємо і передамо запрошення.
+                    </p>
+                   <img src="./img/mainPage/main5.png" alt="Secret date" class="block3__image">
+                   <button class="block3__button">Залишити заявку</button>
+                </div>
+            </div>
+        </div>
+        <div class="main__block4">
+            <div class="outside__container outside__block4">
+                <div class="inside__container inside__block4">
+                    <div class="block4__contact-info">
+                        <div class="contact-info-block">
+                            <img src="./img/mainPage/phone.png" alt="Phone icon" class="block4__icon">
+                            <p class="block4__text1">Зв’язатися з нами</p>
+                            <p class="block4__text2">
+                                +38(095)6574839
+                                +38(098)7658753
+                            </p>
+                        </div>
+                        <div class="contact-info-block">
+                            <div class="contact-info-block">
+                                <img src="./img/mainPage/placeholder.png" alt="Phone icon" class="block4__icon">
+                                <p class="block4__text1">Де нас знайти?</p>
+                                <p class="block4__text2">
+                                    м.Київ, проспект перемоги 24    
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer class="footer">
+        <div class="outside__container footer__container">
+            <div class="footer__social-icons">
+                <img src="./img/mainPage/instagram.png" alt="Instagram" class="footer__instagram">
+                <img src="./img/mainPage/facebook.png" alt="Facebook" class="footer__facebook">
+            </div>
+            <div class="footer__links">
+                <a href="#" class="footer__link">Доставка</a>
+                <a href="#" class="footer__link">Відгуки</a>
+                <a href="#" class="footer__link">Контакти</a>
+            </div>
+            <div class="logo-name footer__logo-name">
+                <div class="logo">
+                    <img src="./img/mainPage/logo.png" alt="Logo" class="logo-image">
+                </div>
+                <div class="name">Emojift</div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
