--- a/index.html
+++ b/index.html
@@ -58,14 +58,17 @@
                         <div class="block2__buy-item">
                             <p class="buy-description">Саме той ідеальний подарунок</p>
                             <img src="./img/mainPage/main2.png" alt="Perfect gift" class="buy-img">
+                            <img src="./img/mainPage/main22.png" alt="Perfect gift" class="buy-img2">
                         </div>
                         <div class="block2__buy-item">
                             <p class="buy-description">Безцінне враження, яке можна придбати</p>
                             <img src="./img/mainPage/main3.png" alt="Perfect gift" class="buy-img">
+                            <img src="./img/mainPage/main32.png" alt="Perfect gift" class="buy-img2">
                         </div>
                         <div class="block2__buy-item">
                             <p class="buy-description">Приємна дрібничка без приводу</p>
                             <img src="./img/mainPage/main4.png" alt="Perfect gift" class="buy-img">
+                            <img src="./img/mainPage/main42.png" alt="Perfect gift" class="buy-img2">
                         </div>
                     </div>
                 </div>
@@ -81,6 +84,7 @@
                         Ми все влаштуємо і передамо запрошення.
                     </p>
                    <img src="./img/mainPage/main5.png" alt="Secret date" class="block3__image">
+                   <img src="./img/mainPage/main52.png" alt="Secret date" class="block3__image2">
                    <button class="block3__button">Залишити заявку</button>
                 </div>
             </div>
@@ -98,13 +102,13 @@
                             </p>
                         </div>
                         <div class="contact-info-block">
-                            <div class="contact-info-block">
+                            
                                 <img src="./img/mainPage/placeholder.png" alt="Phone icon" class="block4__icon">
                                 <p class="block4__text1">Де нас знайти?</p>
                                 <p class="block4__text2">
                                     м.Київ, проспект перемоги 24    
                                 </p>
-                            </div>
+                           
                         </div>
                     </div>
                 </div>
@@ -114,8 +118,8 @@
     <footer class="footer">
         <div class="outside__container footer__container">
             <div class="footer__social-icons">
-                <img src="./img/mainPage/instagram.png" alt="Instagram" class="footer__instagram">
-                <img src="./img/mainPage/facebook.png" alt="Facebook" class="footer__facebook">
+                <img src="./img/mainPage/instagram.png" alt="Instagram" class="footer__icon">
+                <img src="./img/mainPage/facebook.png" alt="Facebook" class="footer__icon">
             </div>
             <div class="footer__links">
                 <a href="#" class="footer__link">Доставка</a>
@@ -128,6 +132,7 @@
                 </div>
                 <div class="name">Emojift</div>
             </div>
+            <img src="./img/mainPage/hidden_menu.png" alt="Hidden Menu" class="footer__hidden-menu">
         </div>
     </footer>
 </body>
