Gifts container no adaptive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <img src="./img/mainPage/hidden_menu.png" alt="Hidden Menu" class="header__hidden-menu">
             <div class="header__links">
-                <a href="#" class="header__link1 header__link">Подарунки</a>
+                <a href="./gifts.html" class="header__link1 header__link">Подарунки</a>
                 <a href="#" class="header__link2 header__link">Враження</a>
                 <a href="#" class="header__link3 header__link">Без приводу</a>
                 <a href="#" class="header__link4 header__link">Таємне побачення</a>
