--- a/gifts.html
+++ b/gifts.html
@@ -49,7 +49,9 @@
                         Тут ви зможете знайти ідеальний подарунок на будь-який смак та гаманець.
                         Подарувати щастя ще ніколи не було так просто.
                     </h2>
-                    <p class="block1__sort-text">Сортувати по:</p>
+                    <p class="block1__sort-text sort-text1">Сортувати по:</p>
+                    <p class="block1__sort-text sort-text2">Сортувати по</p>
+                    <button class="sort_button"></button>
                     <div class="block1__filters">
                         <button class="block1__filter">Ціна ↑</button>
                         <button class="block1__filter">Ціна ↓</button>
@@ -64,39 +66,7 @@
                             <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
                             <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
                             <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
-                            <button class="product__price no-sale-price">420 грн</button>
-                            <button class="product__sale-price">399 грн</button>
-                            <div class="sale-amount">5%</div>
-                        </div>
-                        <div class="product">
-                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
-                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
-                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
-                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
                             <button class="product__price">420 грн</button>
-                        </div>
-                        <div class="product">
-                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
-                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon favourite-selected">
-                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
-                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
-                            <button class="product__price">420 грн</button>
-                        </div>
-                        <div class="product"> 
-                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
-                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
-                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon cart-selected">
-                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
-                            <button class="product__price">420 грн</button>
-                        </div>
-                        <div class="product">
-                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
-                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon favourite-selected">
-                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon cart-selected">
-                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
-                            <button class="product__price no-sale-price">420 грн</button>
-                            <button class="product__sale-price">315 грн</button>
-                            <div class="sale-amount">25%</div>
                         </div>
                         <div class="product">
                             <div class="product__name">5* Любовь (Huzzle Amour)</div>
@@ -111,15 +81,6 @@
                             <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
                             <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
                             <button class="product__price">420 грн</button>
-                        </div>
-                        <div class="product"> 
-                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
-                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
-                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
-                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
-                            <button class="product__price no-sale-price">420 грн</button>
-                            <button class="product__sale-price">210 грн</button>
-                            <div class="sale-amount">50%</div>
                         </div>
                         <div class="product">
                             <div class="product__name">5* Любовь (Huzzle Amour)</div>
@@ -142,7 +103,42 @@
                             <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
                             <button class="product__price">420 грн</button>
                         </div>
-                        <div class="product"> 
+                        <div class="product">
+                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
+                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
+                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
+                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
+                            <button class="product__price">420 грн</button>
+                        </div>
+                        <div class="product">
+                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
+                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
+                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
+                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
+                            <button class="product__price">420 грн</button>
+                        </div>
+                        <div class="product extra-product">
+                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
+                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
+                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
+                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
+                            <button class="product__price">420 грн</button>
+                        </div>
+                        <div class="product extra-product">
+                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
+                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
+                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
+                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
+                            <button class="product__price">420 грн</button>
+                        </div>
+                        <div class="product extra-product">
+                            <div class="product__name">5* Любовь (Huzzle Amour)</div>
+                            <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
+                            <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
+                            <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
+                            <button class="product__price">420 грн</button>
+                        </div>
+                        <div class="product extra-product">
                             <div class="product__name">5* Любовь (Huzzle Amour)</div>
                             <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
                             <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
@@ -155,9 +151,9 @@
                         <button class="page-button">1</button>
                         <button class="page-button">2</button>
                         <button class="page-button selected-page">3</button>
-                        <button class="page-button">4</button>
-                        <button class="page-button">5</button>
-                        <button class="page-button">6</button>
+                        <button class="page-button extra-page">4</button>
+                        <button class="page-button extra-page">5</button>
+                        <button class="page-button extra-page">6</button>
                         <button class="page-button">...</button>
                         <button class="page-button">10</button>
                         <button class="next-button"></button>
@@ -170,14 +166,14 @@
                 <div class="inside__container inside__block2">
                     <h2 class="block2__text">Нещодавно переглянуті</h2>
                     <div class="block2__recents">
-                        <div class="product product-recent">
+                        <div class="product product-recent product-recent-phone">
                             <div class="product__name">5* Любовь (Huzzle Amour)</div>
                             <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
                             <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
                             <img src="./img/gifts/product_image.png" alt="Product image" class="product__image">
                             <button class="product__price">420 грн</button>
                         </div>
-                        <div class="product product-recent">
+                        <div class="product product-recent extra-product">
                             <div class="product__name">5* Любовь (Huzzle Amour)</div>
                             <img src="./img/gifts/heart_border.png" alt="Favourites" class="product__favourite-icon">
                             <img src="./img/gifts/cart_border.png" alt="Cart" class="product__cart-icon">
