--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="./gifts.html" class="header__link1 header__link">Подарунки</a>
                 <a href="#" class="header__link2 header__link">Враження</a>
                 <a href="#" class="header__link3 header__link">Без приводу</a>
-                <a href="#" class="header__link4 header__link">Таємне побачення</a>
+                <a href="./date.html" class="header__link4 header__link">Таємне побачення</a>
             </div>
             <div class="header__icons">
                 <div class="header__search header__icon">
