--- a/gifts.html
+++ b/gifts.html
@@ -194,7 +194,7 @@
             <div class="footer__links">
                 <a href="#" class="footer__link">Доставка</a>
                 <a href="#" class="footer__link">Відгуки</a>
-                <a href="#" class="footer__link">Контакти</a>
+                <a href="./contacts.html" class="footer__link">Контакти</a>
             </div>
             <div class="logo-name footer__logo-name">
                 <div class="logo">
